<!--
  ~ Copyright (C) 2018 Sergio Carabantes
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="multiple_tittle">More pictures</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search London</string>
</resources>
